--- a/.env
+++ b/.env
@@ -14,5 +14,11 @@ DB_USERNAME=root
 DB_PASSWORD=root&1234
 DB_DEBUG=2
 
+REDIS_HOST = 127.0.0.1
+REDIS_PORT = 6379
+REDIS_PASSWORD=
+REDIS_CACHE_DB=0
+REDIS_MAIN_DB=1
+
 LOG_TYPE=daily
 LOG_LEVEL=debug
