发送邮件（mail 包）

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DB_DEBUG=2
 
 REDIS_HOST = 127.0.0.1
 REDIS_PORT = 6379
-REDIS_PASSWORD=
+REDIS_PASSWORD= root1234
 REDIS_CACHE_DB=0
 REDIS_MAIN_DB=1
 
